--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           <h2>Sobre nós:</h2>
           <p>
             Os profissionais desenvolvem seus trabalhos dentro de sua atuação de
-            maneira abrangente e atuam no atendimento clínico, no cuidar do ser
+            maneira <strong>abrangente</strong> e atuam no atendimento clínico, no <strong>cuidar</strong> do ser
             humano através de psicoterapia principalmente individual ou em
             grupo.
           </p>
@@ -56,7 +56,7 @@
                 width="150"
               />
               <p>Wanessa Santos de Oliveira</p>
-              <p>CRP 06/000000</p>
+              <p><i><u>CRP 06/000000</u></i></p>
             </div>
             <div class="card">
               <img
@@ -65,7 +65,7 @@
                 width="150"
               />
               <p>Milena Domingues Sanches</p>
-              <p>CRP 04/000000</p>
+              <p><i><u>CRP 04/000000</u></i></p>
             </div>
           </div>
         </div>
